--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  background-color: rgb(17, 106, 12);
 }
